--- a/src/components/events/event-card.scss
+++ b/src/components/events/event-card.scss
@@ -1,35 +1,30 @@
 @use "../../styles/variables" as v;
 @use "../../styles/mixins" as m;
-.course-card {
-  height: 100%;
-  overflow: hidden;
+
+.event-card {
+  height: 100% !important;
 
   .card-body {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    height: 100%;
 
-    .card-title {
-      color: v.$color2;
-      margin-top: 20px;
-      margin-bottom: 10px;
-      font-weight: bold;
-    }
     .card-subtitle {
+      margin-top: 20px;
+      margin-bottom: 20px;
       color: v.$color1;
       display: flex;
       justify-content: space-between;
-      margin-bottom: 20px;
+      align-items: center;
     }
+
     .image {
       overflow: hidden;
-
       img {
-        @include m.transition(0.3s);
-
-        :hover {
-          opacity: 0.8;
-          @include m.transform(scale(1.3));
+        @include m.transition(transform 0.5s);
+        &:hover {
+          @include m.transform(scale(1.5) rotate(5deg));
         }
       }
     }
