created contact page

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -11,3 +11,6 @@ $primary: $color1;
 $secondary: $color2;
 
 $font-family-sans-serif: "Noto Sans", sans-serif;
+
+$color1-opacity-50: rgba(43, 42, 76, 0.5);
+
