--- a/src/components/home/featured-courses.scss
+++ b/src/components/home/featured-courses.scss
@@ -1,12 +1,11 @@
 @use "../../styles/variables" as v;
-@use "../../styles/mixins" as m;
 
 .featured-courses {
-  background-color: v.$color4;
-  padding-top: 50px;
+  background-color: v.$color3;
+  padding: 100px 0;
+
   h2 {
-    @include m.heading(v.$color2, 2.5rem, 700, 0.5px, v.$color1);
     text-align: center;
-    margin-bottom: 30px;
+    margin-bottom: 50px;
   }
 }
