--- a/src/components/home/upcoming-events.scss
+++ b/src/components/home/upcoming-events.scss
@@ -1,10 +1,11 @@
-@use "../../styles/variables" as v;
-@use "../../styles/mixins" as m;
-
 .upcoming-events {
-  background-color: v.$color4;
-  padding-top: 50px;
   h2 {
-    display: block;
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 50px;
+  }
+
+  .swiper-slide {
+    height: auto;
   }
 }
