contact page done

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,8 +1,8 @@
 $color1: #2b2a4c;
 
-$color2: #b31312;
+$color2: #55c330;
 
-$color3: #ea906c;
+$color3: #0096c7;
 
 $color4: #eee2de;
 
@@ -13,4 +13,3 @@ $secondary: $color2;
 $font-family-sans-serif: "Noto Sans", sans-serif;
 
 $color1-opacity-50: rgba(43, 42, 76, 0.5);
-
