--- a/src/components/home/slider.scss
+++ b/src/components/home/slider.scss
@@ -1,18 +1,21 @@
 @use "../../styles/mixins" as m;
 @use "../../styles/variables" as v;
+
+$slider-img-height: calc(100vh - 110px);
+
 .slider {
   img {
-    height: 100vh;
+    height: $slider-img-height;
     object-fit: cover;
-    object-position: 75% center;
-    
+    object-position: center center;
   }
+
   .carousel-caption {
-    text-align: center;
-    bottom: auto;
     top: 50%;
-    width: 80%;
-    color: v.$color1;
+    bottom: auto;
+    text-align: center;
+    width: 70%;
+    color: v.$color2;
     @include m.transform(translateY(-50%));
 
     @media (min-width: 768px) {
