login form crerated/ formik - yup

--- a/src/components/contact/index.scss
+++ b/src/components/contact/index.scss
@@ -16,6 +16,10 @@
       padding: 50px;
     }
 
+    a {
+      color: v.$color2-opacity-50;
+    }
+
     .nav-link {
       margin-bottom: 15px;
     }
