--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -13,3 +13,5 @@ $secondary: $color2;
 $font-family-sans-serif: "Noto Sans", sans-serif;
 
 $color1-opacity-50: rgba(43, 42, 76, 0.5);
+
+$color2-opacity-50: rgba(85, 195, 48, 0.5);
