Auth service and Admin pages link done

--- a/src/components/common/page-header.scss
+++ b/src/components/common/page-header.scss
@@ -10,11 +10,11 @@
     font-weight: 700;
 
     &::before {
-      content: "○ ";
+      content: "- ";
     }
 
     &::after {
-      content: " ○";
+      content: " -";
     }
   }
 }
