--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,8 +1,8 @@
-$color1: #2b2a4c;
+$color2: #5f8670;
 
-$color2: #6c155d;
+$color1: #ff9800;
 
-$color3: #386777;
+$color3: #495e57;
 
 $color4: #eee2de;
 
@@ -10,8 +10,8 @@ $primary: $color1;
 
 $secondary: $color2;
 
-$font-family-sans-serif: "Noto Sans", sans-serif;
+$font-family:  'Lato', sans-serif;
 
-$color1-opacity-50: rgba(43, 42, 76, 0.5);
+$color1-opacity-50: rgba(43, 42, 0.5, 0.5);
 
 $color2-opacity-50: rgba(85, 195, 48, 0.5);
